api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: team2
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 3000
    targetPort: 8000
